fixed file path

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<div class="composerContainer">
 				<div class="composer">
 					<div class="name">	
-						<a href="composers/dani/dani_a.html"> Dani Abouhamad </a>
+						<a href="composers/dani_a.html"> Dani Abouhamad </a>
 					</div>
 					<div class="preview"> 
 						<video  controls>
@@ -35,31 +35,7 @@
 				</div>
 				<div class="composer">
 					<div class="name">	
-						<a href="composers/amani/amani_c.html"> Amani Cavender </a>
-					</div>
-					<div class="preview"> 
-						<video  controls>
-							<source src="Hoopes.mov" type="video/mp4">
-						Error loading Video.
-						</video>
-					</div>
-				</div>
-			</div>
-			<div class="composerContainer">
-				<div class="composer">
-					<div class="name">	
-						<a href="composers/brian/brian_cho.html"> Brian Cho </a>
-					</div>
-					<div class="preview"> 
-						<video  controls>
-							<source src="Hoopes.mov" type="video/mp4">
-						Error loading Video.
-						</video>
-					</div>
-				</div>
-				<div class="composer">
-					<div class="name">	
-						<a href="composers/lucas/lucas.html"> Lucas Faria De Sa Tucker </a>
+						<a href="composers/amani_c.html"> Amani Cavender </a>
 					</div>
 					<div class="preview"> 
 						<video  controls>
@@ -72,7 +48,7 @@
 			<div class="composerContainer">
 				<div class="composer">
 					<div class="name">	
-						<a href="composers/morgan/morgan_f.html"> Morgan Forbes </a>
+						<a href="composers/brian_cho.html"> Brian Cho </a>
 					</div>
 					<div class="preview"> 
 						<video  controls>
@@ -83,31 +59,7 @@
 				</div>
 				<div class="composer">
 					<div class="name">	
-						<a href="composers/noah/noah_f.html"> Noah Fox </a>
-					</div>
-					<div class="preview"> 
-						<video  controls>
-							<source src="Hoopes.mov" type="video/mp4">
-						Error loading Video.
-						</video>
-					</div>
-				</div>
-			</div>
-			<div class="composerContainer">
-				<div class="composer">
-					<div class="name">	
-						<a href="composers/yuehao/yuehao_g.html"> Yuehao Gao </a>
-					</div>
-					<div class="preview"> 
-						<video  controls>
-							<source src="Hoopes.mov" type="video/mp4">
-						Error loading Video.
-						</video>
-					</div>
-				</div>
-				<div class="composer">
-					<div class="name">	
-						<a href="composers/nelwin/nelwin.html"> Nelwin Gonzales Barreto </a>
+						<a href="composers/lucas.html"> Lucas Faria De Sa Tucker </a>
 					</div>
 					<div class="preview"> 
 						<video  controls>
@@ -120,7 +72,7 @@
 			<div class="composerContainer">
 				<div class="composer">
 					<div class="name">	
-						<a href="composers/ben_h/benjamin_h.html"> Benjamin Harrold </a>
+						<a href="composers/morgan_f.html"> Morgan Forbes </a>
 					</div>
 					<div class="preview"> 
 						<video  controls>
@@ -131,7 +83,55 @@
 				</div>
 				<div class="composer">
 					<div class="name">	
-						<a href="composers/jason/jasonhoopes.html"> Jason Hoopes </a>
+						<a href="composers/noah_f.html"> Noah Fox </a>
+					</div>
+					<div class="preview"> 
+						<video  controls>
+							<source src="Hoopes.mov" type="video/mp4">
+						Error loading Video.
+						</video>
+					</div>
+				</div>
+			</div>
+			<div class="composerContainer">
+				<div class="composer">
+					<div class="name">	
+						<a href="composers/yuehao_g.html"> Yuehao Gao </a>
+					</div>
+					<div class="preview"> 
+						<video  controls>
+							<source src="Hoopes.mov" type="video/mp4">
+						Error loading Video.
+						</video>
+					</div>
+				</div>
+				<div class="composer">
+					<div class="name">	
+						<a href="composers/nelwin.html"> Nelwin Gonzales Barreto </a>
+					</div>
+					<div class="preview"> 
+						<video  controls>
+							<source src="Hoopes.mov" type="video/mp4">
+						Error loading Video.
+						</video>
+					</div>
+				</div>
+			</div>
+			<div class="composerContainer">
+				<div class="composer">
+					<div class="name">	
+						<a href="composers/benjamin_h.html"> Benjamin Harrold </a>
+					</div>
+					<div class="preview"> 
+						<video  controls>
+							<source src="Hoopes.mov" type="video/mp4">
+						Error loading Video.
+						</video>
+					</div>
+				</div>
+				<div class="composer">
+					<div class="name">	
+						<a href="composers/jasonhoopes.html"> Jason Hoopes </a>
 					</div>
 					<div class="preview"> 
 						<video  controls>
@@ -144,7 +144,7 @@
 			<div class="composerContainer">
 				<div class="composer">
 					<div class="name">	
-						<a href="composers/joel/joel_k.html"> Joel Keohane </a>
+						<a href="composers/joel_k.html"> Joel Keohane </a>
 					</div>
 					<div class="preview"> 
 						<video  controls>
@@ -155,31 +155,7 @@
 				</div>
 				<div class="composer">
 					<div class="name">	
-						<a href="composers/sage/sage_l.html"> Sage Lagenfeld  </a>
-					</div>
-					<div class="preview"> 
-						<video  controls>
-							<source src="Hoopes.mov" type="video/mp4">
-						Error loading Video.
-						</video>
-					</div>
-				</div>
-			</div>
-			<div class="composerContainer">
-				<div class="composer">
-					<div class="name">	
-						<a href="composers/oren/oren_r.html"> Oren Ronen </a>
-					</div>
-					<div class="preview"> 
-						<video  controls>
-							<source src="Hoopes.mov" type="video/mp4">
-						Error loading Video.
-						</video>
-					</div>
-				</div>
-				<div class="composer">
-					<div class="name">	
-						<a href="composers/tao/tao_s.html"> Tao Setoguchi </a>
+						<a href="composers/sage_l.html"> Sage Lagenfeld  </a>
 					</div>
 					<div class="preview"> 
 						<video  controls>
@@ -192,7 +168,7 @@
 			<div class="composerContainer">
 				<div class="composer">
 					<div class="name">	
-						<a href="composers/matt/matt_s.html"> Matthew Siegelson </a>
+						<a href="composers/oren_r.html"> Oren Ronen </a>
 					</div>
 					<div class="preview"> 
 						<video  controls>
@@ -203,7 +179,7 @@
 				</div>
 				<div class="composer">
 					<div class="name">	
-						<a href="composers/ben_w/benjamin_w.html"> Benjamin Wakefield </a>
+						<a href="composers/tao_s.html"> Tao Setoguchi </a>
 					</div>
 					<div class="preview"> 
 						<video  controls>
@@ -216,7 +192,31 @@
 			<div class="composerContainer">
 				<div class="composer">
 					<div class="name">	
-						<a href="composers/spencer/spencer_w.html"> Spencer Webb </a>
+						<a href="composers/matt_s.html"> Matthew Siegelson </a>
+					</div>
+					<div class="preview"> 
+						<video  controls>
+							<source src="Hoopes.mov" type="video/mp4">
+						Error loading Video.
+						</video>
+					</div>
+				</div>
+				<div class="composer">
+					<div class="name">	
+						<a href="composers/benjamin_w.html"> Benjamin Wakefield </a>
+					</div>
+					<div class="preview"> 
+						<video  controls>
+							<source src="Hoopes.mov" type="video/mp4">
+						Error loading Video.
+						</video>
+					</div>
+				</div>
+			</div>
+			<div class="composerContainer">
+				<div class="composer">
+					<div class="name">	
+						<a href="composers/spencer_w.html"> Spencer Webb </a>
 					</div>
 					<div class="preview"> 
 						<video  controls>
